Add associations for ShortenedUrl, User, and Visit model

--- a/url_shortener/URLShortener/test/fixtures/visits.yml
+++ b/url_shortener/URLShortener/test/fixtures/visits.yml
@@ -1,13 +1,12 @@
 # == Schema Information
 #
-# Table name: shortened_urls
+# Table name: visits
 #
-#  id         :bigint           not null, primary key
-#  user_id    :integer          not null
-#  long_url   :string           not null
-#  short_url  :string           not null
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
+#  id           :bigint           not null, primary key
+#  short_url_id :integer          not null
+#  user_id      :integer          not null
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
